[package]
authors = ["Rory McCann <rory@technomancy.org>"]
license = "AGPL-3.0"
name = "osm-history-animation"
repository = "https://github.com/rory/osm-history-animation"
version = "0.2.0"

[dependencies]
clap = "2"
image = "0.12"

[dependencies.gif]
git = "https://github.com/rory/image-gif"

[dependencies.orthoproj]
git = "https://github.com/rory/orthoproj-rs"

[dependencies.osmio]
git = "https://github.com/rory/osmio"
